@@ -27,4 +27,59 @@ class ApplicationController < ActionController::Base
   def check_screener_or_subject_handler
     redirect_to root_path, alert: "You do not have sufficient privileges to access that page." unless current_user.screener? or current_user.subject_handler?
   end
+
+  private
+
+  def send_message(service, form_data = {}, method = "get", limit = 1, service_url = '')
+    return { result: '', error: 'No Task Tracker URL provided' } if TASK_TRACKER_URL.blank? or TT_EMAIL.blank? or TT_PASSWORD.blank?
+    error = ''
+    data = ''
+    response = ''
+    return { result: data, error: 'HTTP redirect too deep' } if limit < 0
+
+    t_msg_start = Time.now
+
+    service_url = "#{TASK_TRACKER_URL}/#{service}" if service_url.blank?
+
+    begin
+      url = URI.parse(service_url)
+      use_secure = (url.scheme == 'https')
+
+      https = Net::HTTP.new(url.host, url.port)
+      https.open_timeout = 1000 # in seconds
+      https.read_timeout = 3000 # in seconds
+      https.use_ssl = true if use_secure
+      https.verify_mode = OpenSSL::SSL::VERIFY_NONE if use_secure
+
+      headers = { 'Content-Type' => 'text/html', 'WWW-Authenticate' => 'Basic realm="Application"', 'Authorization' => "Basic #{Base64.strict_encode64("#{TT_EMAIL}:#{TT_PASSWORD}")}" }
+
+      url = URI.parse(service_url)
+      req = if method == "post"
+        Net::HTTP::Post.new(url.path, headers)
+      else # elsif method == "get"
+        Net::HTTP::Get.new(url.path, headers)
+      end
+      req.set_form_data(form_data.stringify_keys, ';') unless form_data.blank?
+
+      https.start do |http|
+        response = http.request(req)
+      end
+      data = response.body
+
+      if response.kind_of?(Net::HTTPSuccess)
+        # Do nothing, success!
+      elsif response.kind_of?(Net::HTTPRedirection)
+        return send_message(service, form_data, method, limit - 1, response['location'])
+      else
+        error = "Error: #{response.class.name} #{data}"
+        data = ''
+      end
+    rescue => e
+      error = e.to_s
+      Rails.logger.debug "Error: #{error} #{data}"
+      data = ''
+    end
+
+    { result: data, error: error }
+  end
 end
