@@ -4,6 +4,7 @@
   * Call comments are now also added to a Task Tracker group description
   * Choices can now be set to only show specific fields for different call types
   * Choices can now be set to only show specific fields for different evaluation administration types
+  * Task Tracker stickies are now integrated on the Patient Timeline
   * Update to Rails 3.2.3
 
 * Bug Fix
